# neuralib

./: .gitignore  CMakeLists.txt  Makefile  Optimisation.md  README.md  WIKI.md  debug.cpp  main.cpp  main2.cpp  point.txt  runner  runner.cpp  unit_test.cpp
header/: accuracy.hpp  activation_linear.hpp  activation_relu.hpp  activation_sigmoid.hpp  activation_softmax.hpp  activation_softmax_loss_categoricalcrossentropy.hpp  constants.hpp  dataset.hpp  graphics.hpp  layer.hpp  layer_dense.hpp  layer_dropout.hpp  loss.hpp  matrix.hpp  model.hpp  neuron.hpp  optimizer.hpp  plot.hpp  shape.hpp  statistic.hpp  tensor.hpp  tensor_inline.hpp  tools.hpp
main/: debug.cpp  main.hpp  main_binary_cross_entropy.cpp  main_categorical_cross_entropy.cpp  main_model_binary_cross_entropy.cpp  main_model_categorical_cross_entropy.cpp  main_model_mnist.cpp  main_model_regression.cpp  main_regression.cpp  test  test.cpp
src/: accuracy.cpp  activation_linear.cpp  activation_relu.cpp  activation_sigmoid.cpp  activation_softmax.cpp  activation_softmax_loss_categoricalcrossentropy.cpp  dataset.cpp  graphics.cpp  layer.cpp  layer_dense.cpp  layer_dropout.cpp  loss.cpp  loss_binary_crossentropy.cpp  loss_categorical_crossentropy.cpp  loss_mean_absolute_error.cpp  loss_mean_squared_error.cpp  main.cpp  matrix.cpp  model.cpp  neuron.cpp  optimizer.cpp  plot.cpp  statistic.cpp  tensor.cpp  tensor_inline.cpp  tools.cpp
tests/: test_accuracy.h  test_activation_linear.h  test_activation_relu.h  test_activation_sigmoid.h  test_activation_softmax.h  test_activation_softmax_loss_categoricalcrossentropy.h  test_layer_dense.h  test_layer_dropout.h  test_loss_absolute_error.h  test_loss_binary_crossentropy.h  test_loss_categorical_crossentropy.h  test_loss_mean_squared_error.h  test_model.h  test_optimizer.h  test_tensorinline_basic_operation.h  test_tensorinline_complex_operation.h
unitTest/: Makefile  build.sh  tensorinline_basic_operation.h  tensorinline_complex_operation.h
(+2 files in other folders)
